# PleaseDoNotTheRepo

./: .gitignore  .gitmodules  README.md  Signup.html  calc_dates  email_app.py  get_entity_ids.py  get_login_token.py  get_scene_metadata.py  globe.html  ids.csv  index.html  package-lock.json  pleasedonotthemap  scene_metadata.json  send_mail.py  send_notification.py  styles.css  test.html  test.json  test.py  trial.py  user_database.py  user_notifications.db
backend/: .gitignore  aws_bucket.py  converter.py  cycles_full.json  database.py  downloader.py  getMeta.py  get_wrs.py  landsat_sr.py  landstat.py  mailer.py  main.py  path-row-extracter  pyproject.toml  send_notification.py  user_database.py  user_notifications.db
backend/geojson/: converter.py  test.csv
backend/system/: gunicorn.service  gunicorn.socket
frontend/: globe.html  index.html  package-lock.json  package.json  signin.html  signup.html  signup.js  slide.html  tailwind.config.js  testmailboilerplate.html
frontend/css/: output.css  skeleton.css
frontend/public/: main.js  rigged.html  tailwind.config.js
frontend/public/static/: paths.json  pleasedonotcat.glb
frontend/static/: interactive.css  interactive.js  paths.geojson  pleasedontsatellite.mtl  satellite.glb
mail/: send_mail.py
static/: interactive.js
tools/: normalgeo.py
