[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^13.1"
requests = "^2.32.3"
tqdm = "^4.66.5"
aiohttp = "^3.10.9"
boto3 = "^1.35.34"
rasterio = "^1.4.1"
flask = "^3.0.3"
apscheduler = "^3.10.4"
pystac-client = "^0.8.3"
pyproj = "^3.7.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
