[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^13.1"
requests = "^2.32.3"
tqdm = "^4.66.5"
aiohttp = "^3.10.9"
apscheduler = "^3.10.4"
pystac-client = "^0.8.3"
planetary-computer = "^1.0.0"
odc-stac = "^0.3.10"
matplotlib = "^3.9.2"
shapely = "^2.0.6"
beautifulsoup4 = "^4.12.3"
gdal = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
